--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -2,7 +2,7 @@
 :root{
     --primary-color: #f0f0f0;
     --secondary-color: white;
-    --links-color: black;
+    --links-color: #021526;
 
     --display-flex: flex;
     --display-grid: grid;
@@ -44,6 +44,7 @@ html, body{
 {
     /* header */
     .header-section{
+        z-index: 1;
         position: var(--position-fixed);
         padding: var(--padding);
         display: var(--display-flex);
@@ -51,22 +52,27 @@ html, body{
         background-color: var(--secondary-color);
         width: var(--full-width);
         height: 100px;
+        box-shadow: var(--box-shadow);
     }
 
     header img{
-        width: 220px;
-        height: 100%;
+        height: 120px;
+        width: 145px;
+        margin-top: 18px;
+        margin-left: 40px;
     }
 
     /* navigation style */
     .navigation-links{
-        width: 50%;
+        display: var(--display-flex);
+        width: 80%;
+        justify-content: center;
+        align-items: center;
     }
 
     .navigation-list{
         display: var(--display-flex);
-        gap: 50px;
-
+        gap: 70px;
     }
 
     /* links style */
@@ -77,12 +83,47 @@ html, body{
     ul li a{
         text-decoration: none;
         color: var(--links-color);
+        font-size: large;
+    }
+
+    /* links hover */
+    .navigation-list li a:hover{
+        transition: 0.2s;
+        border-bottom: 2px solid #6EACDA;
+        color: #6EACDA;
     }
 
     /* center container */
     .container{
         margin: 0 auto;
     }
+
+    /* main section */
+    .main-container{
+        width: var(--full-width);
+        height: 100%;
+    }
+
+    /* carousel slides */
+    .carousel{
+        width: var(--full-width);
+        height: 100%;
+    }
+
+    #carouselExampleRide img{
+        height: auto;
+    }
+
+    .carousel-inner{
+        width: 100%;
+        height: 100%;
+    }
+
+    .carousel-inner img{
+        width: var(--full-width);
+        height: var(--full-width);
+    }
+
 }
 
 /* small tablets */
@@ -104,16 +145,13 @@ html, body{
         width: 100%;
         height: 10%;
         z-index: 1;
-        background-color: rgba(105, 165, 233, 0.705);
         box-shadow: var(--box-shadow);
     }
 
     .header-section img{
         position: fixed;
-        top: 1%;
         left: 20px;
-        width: 120px;
-        height: 70px;
+        height: 95px;
     }
     .navigation-links{
         height: 60%;
@@ -130,9 +168,9 @@ html, body{
 
     .navigation-list{
         position: relative;
-        top: 25%;
+        top: 0;
         width: 100%;
-        text-align: center;
+        /* text-align: center; */
         margin-top: 30px;
     }
 
@@ -145,21 +183,29 @@ html, body{
         transition: 0.3s;
     }
 
+    .navigation-links{
+        
+    }
+
+    ul li{
+        list-style-type: none;
+    }
+
     .navigation-links .navigation-list a:hover, .navigation-links .navigation-list a:focus{
-        color: #f1f1f1;
+        color: #6EACDA;
     }
 
     .closebtn{
         position: fixed;
         font-size: 60px;
-        top: 10px;
-        right: 40px;
+        right: 30px;
+        top: -3%;
     }
 
     .header-section span{
         position: fixed;
         font-size: 36px;
-        top: 30px;
+        top: 10px;
         right: 45px;
     }
 
