--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -26,7 +26,8 @@
 
 /* page font */
 body{
-    font-family: 'Arial', sans-serif;
+    font-family: "Lora", serif;
+    font-optical-sizing: auto;
     background-color: var(--primary-color);
 }
 
@@ -74,6 +75,8 @@ html, body{
 
     .navigation-list{
         display: var(--display-flex);
+        align-items: center;
+        justify-content: center;
         gap: 70px;
     }
 
@@ -85,7 +88,13 @@ html, body{
     ul li a{
         text-decoration: none;
         color: var(--links-color);
-        font-size: 15px;
+        font-size: 17px;
+    }
+
+    /* links focus */
+    .navigation-links .navigation-list a:focus{
+        border-bottom: 2px solid #28577a;
+        color: #28577a;
     }
 
     /* links hover */
@@ -127,6 +136,33 @@ html, body{
         filter: brightness(50%);
     }
 
+    /* carousel slides image captions */
+    .carousel-caption {   
+        position: absolute;
+        top: 30%;
+        text-align: left; 
+    }  
+    
+    .carousel-caption h2, h3, p{
+        text-align: justify;
+        font-family: "Lora", serif;
+        font-optical-sizing: auto;
+    }
+
+    .carousel-caption h2{
+        font-weight: bolder;
+        font-size: 3.5rem;
+    }
+
+    .carousel-caption h3{
+        font-size: 2.3rem;
+    }
+
+    .carousel-caption p{
+        font-size: large;
+        padding-top: 30px;
+    }
+
 }
 
 /* small tablets */
@@ -145,23 +181,29 @@ html, body{
 @media (max-width: 480px)
 {
     .header-section{
+        position: fixed;
+        top: 0%;
         width: 100%;
-        height: 10%;
-        z-index: 1;
+        height: 120px;
+        z-index: 2;
         box-shadow: var(--box-shadow);
+        background-color: var(--secondary-color);
     }
 
+    /* logo */
     .header-section img{
         position: fixed;
-        left: 20px;
-        height: 95px;
+        left: 2px;
+        top: -4%;
+        height: 200px;
     }
+
     .navigation-links{
         height: 60%;
         width: 0;
         position: var(--position-fixed);
         z-index: 1;
-        top: 10%;
+        top: 13%;
         left: 0;
         background-color: var(--primary-color);
         overflow-x: hidden;
@@ -202,7 +244,7 @@ html, body{
         position: fixed;
         font-size: 60px;
         right: 30px;
-        top: -3%;
+        top: 0;
     }
 
     .header-section span{
@@ -214,7 +256,57 @@ html, body{
 
     /* hide small screen buttons */
     #hamburgerIcon{
+        position: fixed;
+        top: 3%;
         display: block;
+
+    }
+
+    .main-container{ 
+        /* margin-top: 30%; */
+        height: 100%;
+        overflow: hidden;
+    }
+
+    /* carousel slides */
+    .carousel{
+        height: 100%;
+    }
+
+    .carousel-inner, .carousel-item{
+        height: 100%;
+        z-index: 1;
+    }
+
+    .carousel-item img{
+        filter: brightness(50%);
+        object-fit: cover;
+        object-position: center;
+        height: 100%;
+    }
+
+     /* carousel slides image captions */
+    .carousel-caption{   
+        bottom: 10%;
+        left: 0;
+        right: 0;
+        padding: 20px;
+        text-align: center;
+    }  
+    
+    .carousel-caption h2{
+        font-weight: bolder;
+        font-size: 1.5rem;
+        margin-bottom: 10px;
+    }
+
+    .carousel-caption h3{
+        font-size: 1rem;
+        margin-bottom: 15px;
+    }
+
+    .carousel-caption p{
+        font-size: 0.9rem;
     }
 }
 
