--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -284,8 +284,8 @@ html, body{
     .carousel-caption{   
         display: flex;
         flex-direction: column;
-        align-items: center;
-        /* justify-content: center; */
+        /* align-items: center; */
+        align-items: flex-start;
         height: 70%;
         text-align: center;
     }  
